Fix small issues